# coreimage

./: .envrc  .gitattributes  .gitignore  Taskfile.yaml  environment.yml  pyproject.toml  setup.py
src/coreimage/: __init__.py  __main__.py  find.py  ivan.py  organise.py  transform.py  utils.py  version.py
src/coreimage/cli/: __init__.py
src/coreimage/cli/interactive/: items.py  menu.py  models.py
src/coreimage/organise/: __init__.py  concat.py
src/coreimage/qrcode/: __init__.py
src/coreimage/resources/: __init__.py
src/coreimage/terminal/: __init__.py  kitty.py
src/coreimage/transform/: __init__.py  background.py  crop.py  upscale.py
